--- a/EconomicTracking/SettlementReports.xaml
+++ b/EconomicTracking/SettlementReports.xaml
@@ -22,7 +22,14 @@
             <Grid>
                 <Button x:Name="Showreportbutton" Content="Show Report" HorizontalAlignment="Left" VerticalAlignment="Top" Width="140" Click="Button_Click_1" Margin="347,339,0,0"/>
                 <GroupBox x:Name="grpSettlementInfo" Header="Settlement Information" Margin="10,7,10,264" >
-                    <DataGrid x:Name="gridSettlement" HorizontalAlignment="Left" VerticalAlignment="Top" EnableRowVirtualization="False" ColumnWidth="*" />
+                    <DataGrid x:Name="gridSettlement" AutoGenerateColumns="False" CanUserAddRows="False" IsReadOnly="True" HorizontalAlignment="Left" VerticalAlignment="Top" EnableRowVirtualization="False" ColumnWidth="*" >
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Binding="{Binding CustomerId}" Header="CustomerId" />
+                            <DataGridTextColumn Binding="{Binding CustomerName}" Header="CustomerName" />
+                            <DataGridTextColumn Binding="{Binding SettlementFrom,StringFormat={}{0:dd MMM yyyy}}" Header="SettlementFromDate" />
+                            <DataGridTextColumn Binding="{Binding SettlementTo,StringFormat={}{0:dd MMM yyyy}}" Header="SettlementToDate" />
+                        </DataGrid.Columns>
+                    </DataGrid>
                 </GroupBox>
                 <GroupBox x:Name="gridSettlementcommodity" Header="Commodity Information" HorizontalAlignment="Left" Width="283" Margin="315,112,0,55" >
                     <DataGrid x:Name="gridCommodity" HorizontalAlignment="Left" VerticalAlignment="Top" Height="172" Width="273" ColumnWidth="*" Margin="0,10,-2,0"/>
@@ -37,21 +44,11 @@
         </GroupBox>
 
         <Grid Margin="0,28,-0.2,-27.8">
-
-            
-
-
             <Grid Margin="0,-10,0,10">
-
-
-
-                <DatePicker HorizontalAlignment="Left" Margin="500,100,0,0" VerticalAlignment="Top" Name="dtSettleFrom" >
-                    
+                <DatePicker HorizontalAlignment="Left" SelectedDateFormat="Long" Margin="500,100,0,0" VerticalAlignment="Top" Name="dtSettleFrom" >
                     
                 </DatePicker>
-
-
-                <DatePicker HorizontalAlignment="Left" Margin="650,101,0,0" VerticalAlignment="Top" Name="dtSettleTo" RenderTransformOrigin="1.125,0.908"/>
+                <DatePicker HorizontalAlignment="Left" Margin="650,101,0,0" SelectedDateFormat="Long" VerticalAlignment="Top" Name="dtSettleTo" RenderTransformOrigin="1.125,0.908"/>
                 <Label Content="Report Start Date" HorizontalAlignment="Left" VerticalAlignment="Top" Width="102" Margin="500,70,0,0"/>
                 <Label Content="Report End Date" HorizontalAlignment="Left" VerticalAlignment="Top" Width="102" Margin="650,70,0,0" />
                 <ComboBox x:Name="cbmCustomer" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="211" Margin="80,36,0,0" Loaded="cbmCustomer_Loaded" SelectionChanged="cbmCustomer_SelectionChanged" >
